span within a div

--- a/fullstackAcademy/IntroToHTML/blockAndInlineElements.html
+++ b/fullstackAcademy/IntroToHTML/blockAndInlineElements.html
@@ -4,4 +4,9 @@
     <span>line</span>
     <!--block elements-->
     <p>different</p><p>line</p>
+    <div>
+        <span>div1 span1</span>
+        <span>div1 span2</span>
+    </div>
+    <div>div2</div>
 </body>
