html     optimizing use of class and id css     optimizing use of class and id js     changes due to html&css modification

--- a/fullstackAcademy/countdownPage/countdown.html
+++ b/fullstackAcademy/countdownPage/countdown.html
@@ -1,7 +1,9 @@
-<link rel="stylesheet" href="./countdown.css">
+<head>
+    <link rel="stylesheet" href="./countdown.css">
+    <script src="./countdown.js"></script>
+</head>
 
-<body>
-    <p id="title">NOTHING WILL HAPPEN</p>
-    <p id="timer">3</p>
+<body class="main">
+    <p id="title" class="normal">simple timer</p>
+    <p id="timer" class="normal">3</p>
 </body>
-<script src="./countdown.js"></script>
