some updates from week ago(forgot to upload)

--- a/interactiveParticles/particles.html
+++ b/interactiveParticles/particles.html
@@ -1,6 +1,8 @@
-<body class="main">
-    <canvas id="mainCanvas" width="1280" height="720"></canvas>
-</body>
+<head>
+    <link rel="stylesheet" href="./particles.css">
+</head>
 
-<link rel="stylesheet" href="./particles.css">
-<script src="./particles.js"></script>
+<body class="main">
+    <canvas id="mainCanvas" width="400" height="600"></canvas>
+    <script src="./particles.js"></script>
+</body>
