creating universal templete for fluent clock outputs

--- a/whateverComesToMind/main.html
+++ b/whateverComesToMind/main.html
@@ -9,9 +9,17 @@
 </head>
 
 <body>
-    <div id="bouncingCircle">
+    <!--
+    <div id="bouncingCircle", class="module">
+        <div class="moduleTitle">Bouncing Circle</div>
         <canvas></canvas>
         <script src="./bouncingCircle.js"></script>
+    </div>
+    -->
+    <div id="stepSequencer" class="module">
+        <div class="moduleName">step sequencer</div>
+        <canvas></canvas>
+        <script src="./stepSequencer.js"></script>
     </div>
 </body>
 </html>
