still figuring out how to manage canvas sizes

--- a/whateverComesToMind/main.html
+++ b/whateverComesToMind/main.html
@@ -16,10 +16,20 @@
         <script src="./bouncingCircle.js"></script>
     </div>
     -->
-    <div id="stepSequencer" class="module">
-        <div class="moduleName">step sequencer</div>
-        <canvas></canvas>
-        <script src="./stepSequencer.js"></script>
+
+    <div id="emptyModule" class="module">
+        <div class="moduleName">empty module</div>
+        <canvas ></canvas>
+        <script src="./emptyModule.js"></script>
     </div>
+
+    <!--
+    <div id="bounseq" class="module">
+        <div class="moduleName">bounseq</div>
+        <canvas></canvas>
+        <script src="./bounseq.js"></script>
+    </div>
+    -->
+    
 </body>
 </html>
