rather than multitasking and not finishing anything, I finished empty module js and figuring out better file structure

--- a/whateverComesToMind/main.html
+++ b/whateverComesToMind/main.html
@@ -6,30 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Make Shit Save Gold</title>
     <link rel="stylesheet" href="./generalStyle.css">
+    <script src="./funcs.js"></script>
+    <script>
+        display={width:window.innerWidth-2, height:window.innerHeight-6}
+    </script>   
 </head>
 
 <body>
-    <!--
-    <div id="bouncingCircle", class="module">
-        <div class="moduleTitle">Bouncing Circle</div>
-        <canvas></canvas>
-        <script src="./bouncingCircle.js"></script>
-    </div>
-    -->
-
-    <div id="emptyModule" class="module">
-        <div class="moduleName">empty module</div>
-        <canvas ></canvas>
+    <div>
+        <canvas id="emptyModule" class="module" ></canvas>
         <script src="./emptyModule.js"></script>
     </div>
-
-    <!--
-    <div id="bounseq" class="module">
-        <div class="moduleName">bounseq</div>
-        <canvas></canvas>
-        <script src="./bounseq.js"></script>
-    </div>
-    -->
-    
 </body>
 </html>
